Fix Zoo block paragraph spacing
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@99622 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/firefoxlive.css
+++ b/style/covehead/firefoxlive.css
@@ -280,8 +280,7 @@ html[dir=rtl] #share {
     margin-top: 10px;
 }
 
-.locale-en-US #firefox p,
-.locale-en-US #zoo p {
+.locale-en-US #firefox p {
     min-height: 6em;
 
 }
